cmake_minimum_required(VERSION 3.21)
project(learning)

set(CMAKE_CXX_STANDARD 14)

add_executable(learning main.cpp chapter02/practise02.hpp chapter02/practise03.hpp chapter02/practise03.h util/util.cpp chapter03/practise01.cpp chapter03/practise01.h chapter03/practise03.cpp chapter03/practise03.h chapter03/practise07.cpp chapter03/practise07.h chapter03/practise16.cpp chapter03/practise16.h chapter03/practise18.cpp chapter03/practise18.h chapter03/practise25.cpp chapter03/practise25.h chapter03/practise26.cpp chapter03/practise26.h util/util.h chapter03/practise27.cpp chapter03/practise27.h chapter03/practise32.cpp chapter03/practise32.h chapter04/practise01.cpp chapter04/practise02.cpp chapter04/practise09.cpp chapter04/practise09main.cpp chapter04/practise11.cpp chapter04/practise11.h chapter04/practise12.cpp)
